--- a/Occupation Data Hennigan_Wells.rmd
+++ b/Occupation Data Hennigan_Wells.rmd
@@ -1,13 +1,24 @@
 ---
 title: "Occupational Data"
 author: "Mary Hennigan and Rob Wells and Abby Zimmardi" 
-date: "2/26/2021"
+date: "3/1/2021"
 output: pdf_document
 ---
 
-# Compilation of Occupational COVID-19 Reports for Calculations
+# Mary- Abby:
+# Please go through and do some serious cutting on this script
+# 
+# 1) Move the whole occupational_master table construction to the end.
+# Kill out any previous versions
+# 2) Clean cities.
+# 3) Clean counties.
+# 4) Write an updated csv with the cleaned companies, cities and counties
+# 5) Run totals by company, highest cases
 
-- **This notebook retrieves data from a Google sheet and compiles a time series of ADH occupational infection reports**
+
+
+
+# Compilation of Occupational COVID-19 Reports for Calculations
 
 -**It will create a masterfile: occupational_master.csv**
 
@@ -33,6 +44,229 @@ library(reshape2)
 library(slider)
 ```
 
+
+
+#--------------------------------------------------------------------#
+#--------------------------------------------------------------------#
+#Part 1: CLEANING
+#--------------------------------------------------------------------#
+#--------------------------------------------------------------------#
+
+#Import occupational_master from github. New version needs to be imported 
+
+```{r}
+occupational_master <- rio::import("https://raw.githubusercontent.com/profrobwells/Spring2021Data/main/occupational_master.csv")
+
+```
+
+
+
+#County Work
+#Needs more cleaning: Some early records have two cities in city and two counties in county. Three December reports have part of the Industry type in the county column
+
+
+#WELLS NOTE: Two of the wealthiest counties in Arkansas have the highest number of occupational reports Benton, 95; Washington 83;
+
+
+```{r}
+#Analyze records by county location
+countyreports <- occupational_master %>% 
+  select(date, city, county) %>% 
+  group_by(county) %>% 
+  count() %>% 
+  arrange(desc(n))
+
+countyreports
+
+#apply the remove punctuation
+occupational_master$county <- gsub("[[:space:]]", "", occupational_master$county)
+
+
+#write.csv(countyreports, "countyreports.csv")
+
+#Notes: Benton, 95; Washington 83; Pope 68;Craighead 56 are the top counties. This is not 100% cleaned yet, but nearly finished.
+  
+```
+
+
+#City Work
+#Needs more cleaning. "AR" is not a city. Two reports from May have two cities listed in one cell. Six reports from October have part of the Industry type split between City and County column. Ft Smith and Fort Smith need to be mutated, GreenForest and GreenForrest. "Various locations" is not a city. Springdale Public school is in Springdale City, Washington County. 
+#Group reoccuring names - City
+
+#USE THIS TEMPLATE TO CLEAN CITY NAMES
+```{r}
+#Thanks Sean, Kara and Nick:
+cleaned_data <- occupational_master %>%
+  mutate(cleaned = tolower(company_name)) %>%
+  #mutate(cleaned = str_remove("'",cleaned)) %>%
+  mutate(cleaned = case_when(
+    str_detect(cleaned, "roehm") ~ "roehm_america",
+    str_detect(cleaned, "tyson") ~ "tyson",
+    TRUE ~ cleaned
+  ))
+```
+
+
+#I don't think this is changing the names in the column to be regrouped? I don't understand
+```{r}
+fortsmith <- occupational_master %>% 
+  filter(grepl ("Smith", city)) %>% 
+  mutate(cleaned = "fort_smith")
+
+greenforest <- occupational_master %>% 
+  filter(grepl ("Green", city)) %>% 
+  mutate(cleaned = "green_forest")
+
+```
+
+```{r}
+#Analyze records by city location
+cityreports <- occupational_master %>% 
+  select(date, city, county) %>% 
+  group_by(city) %>% 
+  count() %>% 
+  arrange(desc(n))
+  
+occupational_master$city <- gsub("[[:space:]]", "", occupational_master$city)
+
+cityreports
+
+#write.csv(cityreports, "cityreports.csv")
+
+#Notes: Springdale has most reports with 70, Russellville follows with 59 then Rogers, 58. 
+```
+
+
+
+#Clean company names
+```{r}
+#Thanks Sean, Kara and Nick:
+cleaned_data <- occupational_master %>%
+  mutate(cleaned = tolower(company_name)) %>%
+  #mutate(cleaned = str_remove("'",cleaned)) %>%
+  mutate(cleaned = case_when(
+    str_detect(cleaned, "roehm") ~ "roehm_america",
+    str_detect(cleaned, "tyson") ~ "tyson",
+    TRUE ~ cleaned
+  ))
+```
+
+#Revised Look at the company names 
+#add the function that produces percent of the whole
+```{r}
+cleaned_data %>% 
+  count(cleaned) %>% 
+  arrange(desc(n))
+#TOTAL NUMBER OF ARK STATE HEATH DEPT REPORTS PER COMPANY SINCE MAY 19, 2020
+#SIX OF TEN ARE POULTRY PROCESSING
+#TYSON IS 36% OF ALL REPORTS
+```
+
+#NEXT: FILTER THIS TO THE SPECIFIC WORKPLACE AND THE HIGHEST VALUE OF CASES
+#This yieled 11,472 total cases before cleaning of the city column
+```{r}
+companytotals <- cleaned_data %>% 
+  select(company_name, cleaned, date, address, city, county, total_number_of_cases) %>% 
+  group_by(cleaned, address, city,county) %>% 
+  filter(total_number_of_cases == max(total_number_of_cases)) 
+
+sum(companytotals$total_number_of_cases)
+  
+```
+
+
+
+#--------------------------------------------------------------------#
+#--------------------------------------------------------------------#
+#Part 2: ANALYSIS
+#--------------------------------------------------------------------#
+#--------------------------------------------------------------------#
+#TOTAL REPORTS BY CITY BY DAY
+```{r}
+#Analyze records by date and location
+
+occupational_master %>% 
+  select(date, company_name, city, county) %>% 
+  group_by(date, city, county) %>% 
+  count() %>% 
+  arrange(desc(n))
+  
+```
+#Continued Analysis
+```{r}
+#Analyze records by cleaned company name
+companyreports <- occupational_master %>% 
+  select(date, city, county, cleaned) %>% 
+  group_by(cleaned) %>% 
+  count() %>% 
+  arrange(desc(n))
+  
+#write.csv(companyreports, "companyreports.csv")
+companyreports
+
+#Notes: Tyson, 250, ConAgra, 39, Simmons Foods, 39
+```
+
+
+```{r}
+#Analyze records by industry
+industryreports <- occupational_master %>% 
+  select(date, city, county, company_name, industry) %>% 
+  group_by(industry) %>% 
+  count() %>% 
+  arrange(desc(n))
+#write.csv(industryreports, "industryreports.csv")
+industryreports
+  
+#Notes: Largest industry category is NA with 459, from 5.19 to 9.14. These are when the reports were Poulty, Non-Poultry.
+#Manufacturing has 326 records
+```
+
+#Split Dates for Analysis
+```{r}
+occupational_master$year <- year(occupational_master$date)
+occupational_master$month <- month(occupational_master$date, label=TRUE)
+#occupation_master1$week <- week(occupation_master1$date)
+#occupation_master1$day <- day(occupation_master1$date)
+#occupation_master1$weekday <- wday(occupation_master1$date, label=TRUE, abbr=FALSE)
+
+occupational_master
+```
+#WELLS COMMENT: Let's do a ggplot graphic with this
+#Group by Month
+```{r}
+month_counts <- occupational_master %>%
+  select(date, city, county, company_name, industry, month) %>% 
+  group_by(month) %>% 
+  count() %>% 
+  arrange(desc(n))
+month_counts
+write.csv(month_counts,"month_counts.csv")
+#Notes: June, 147, July, 142, Dec, 110 and Aug, 109 are the top months and only months above 100.
+```
+
+#Zimmardi attempt at a ggplot graphic
+```{r}
+#install.packages("ggplot2")
+library(ggplot2)
+#ggplot(month_counts, aes(x=month, y=n))
+ggplot(month_counts) + geom_point(aes(x=month, y=n, color=n)) + geom_smooth(aes(x=month, y=n, color=n))
+
+
+#Zimmardi note: I have been looking up different codes, and I can't figure out how to change the label names and add a title. But this shows the number of records by month.
+```
+
+
+
+
+
+
+
+#--------------------------------------------------------------------#
+#--------------------------------------------------------------------#
+#Part 3: TABLE BUILDING
+#--------------------------------------------------------------------#
+#--------------------------------------------------------------------#
 
 
 #THIS IS THE BUILDING PORTION. CAN SKIP TO LINE 363 FOR OCCUPATIONAL_MASTER IMPORT AND ANALYSIS
@@ -363,25 +597,6 @@ write.csv(occupational_master, "occupational_master.csv")
 
 ```
 
-#Wells NOTE: We needed to keep the original company names and create a second cleaned company names column. need the dirty one and the clean one on the same df.
-
-#--------------------------------------------------------------------#
-#--------------------------------------------------------------------#
-#Part 2: Analysis
-#--------------------------------------------------------------------#
-#--------------------------------------------------------------------#
-
-#Import occupational_master from github. New version needs to be imported 
-
-#Feb. 26 2:20 p.m. update: The occupational_master.csv needs to be reimported to github, corrections were made after initial upload.
-
-#I did this already.
-
-
-```{r}
-#occupational_master <- rio::import("https://raw.githubusercontent.com/profrobwells/Spring2021Data/main/occupational_master.csv")
-
-```
 
 
 #Initial Look at the company names 
@@ -430,65 +645,6 @@ tyson_berry
 ```
 
 
-#TOTAL REPORTS BY CITY BY DAY
-```{r}
-#Analyze records by date and location
-
-occupational_master %>% 
-  select(date, company_name, city, county) %>% 
-  group_by(date, city, county) %>% 
-  count() %>% 
-  arrange(desc(n))
-  
-```
-
-
-#County Work
-#Needs more cleaning: Some early records have two cities in city and two counties in county. Three December reports have part of the Industry type in the county column
-
-
-#WELLS NOTE: Two of the wealthiest counties in Arkansas have the highest number of occupational reports Benton, 95; Washington 83;
-
-
-```{r}
-#Analyze records by county location
-countyreports <- occupational_master %>% 
-  select(date, city, county) %>% 
-  group_by(county) %>% 
-  count() %>% 
-  arrange(desc(n))
-
-countyreports
-
-#apply the remove punctuation
-occupational_master$county <- gsub("[[:space:]]", "", occupational_master$county)
-
-
-#write.csv(countyreports, "countyreports.csv")
-
-#Notes: Benton, 95; Washington 83; Pope 68;Craighead 56 are the top counties. This is not 100% cleaned yet, but nearly finished.
-  
-```
-
-#City Work
-#Needs more cleaning. "AR" is not a city. Two reports from May have two cities listed in one cell. Six reports from October have part of the Industry type split between City and County column. Ft Smith and Fort Smith need to be mutated, GreenForest and GreenForrest. "Various locations" is not a city. Springdale Public school is in Springdale City, Washington County. 
-```{r}
-#Analyze records by city location
-cityreports <- occupational_master %>% 
-  select(date, city, county) %>% 
-  group_by(city) %>% 
-  count() %>% 
-  arrange(desc(n))
-  
-occupational_master$city <- gsub("[[:space:]]", "", occupational_master$city)
-
-cityreports
-
-#write.csv(cityreports, "cityreports.csv")
-
-#Notes: Springdale has most reports with 70, Russellville follows with 59 then Rogers, 58. 
-```
-
 #Wells Note:
 #Please list the companies with overlapping names that I need to extract
 #For example, sort this DF below in alphabetical order (there's a sort function in the header when you bring the table up in R)
@@ -502,117 +658,9 @@ Butterball Ozark
 #https://profrobwells.github.io/HomelessSP2020/SF_311_Calls_UofA.html#part_2:_cleaning__analysis
 #See Use grepl to search and tabulate
 #Follow those steps to extract the company names and create a new column, company1, that contains the simplified version
-#Example:
-x915 <- SF %>% 
-  filter(grepl ("915", original_crime_type_name)) %>% 
-  mutate(cleaned = "homeless_complaint")
-  
-  
-#Group Reoccuring Names - Company Names
-#I don't think this is changing the names in the column to be regrouped? I don't understand
-
-#WELLS NOTE: 
-#This process below creates separate DFs with a new cleaned variable and the company original.
-#The DFs then would be recombined into a new one 
 
 
-```{r}
-tyson <- occupational_master %>% 
-  filter(grepl ("Tyson", company_name)) %>% 
-  mutate(cleaned = "tyson")
 
-conagra <- occupational_master %>% 
-  filter(grepl ("ConAgra", company_name)) %>% 
-  mutate(cleaned = "conagra")
-
-georges <- occupational_master %>% 
-  filter(grepl ("George's", company_name)) %>% 
-  mutate(cleaned = "georges")
-
-pilgrims <- occupational_master %>% 
-  filter(grepl ("Pilgrim's", company_name)) %>% 
-  mutate(cleaned = "pilgrims")
-
-simmons <- occupational_master %>% 
-  filter(grepl ("Simmons", company_name)) %>% 
-  mutate(cleaned = "simmons")
-
-riceland <- occupational_master %>% 
-  filter(grepl ("Riceland", company_name)) %>% 
-  mutate(cleaned = "riceland")
-
-roehm <- occupational_master %>% 
-  filter(grepl ("Roehm", company_name)) %>% 
-  mutate(cleaned = "roehm_america")
-
-saracen <- occupational_master %>% 
-  filter(grepl ("Saracen", company_name)) %>% 
-  mutate(cleaned = "saracen")
-
-```
-
-#CLEANED IS 402 records
-```{r warning=FALSE}
-occupational_cleaned <- smartbind(tyson, conagra, georges, pilgrims, simmons, 
-                                  riceland, roehm, saracen)
-glimpse(occupational_cleaned)
-
-#write.csv(occupational_cleaned, "occupational_cleaned.csv")
-
-```
-
-#Extracts the records that were not cleaned: 
-
-```{r}
-notcleaned <- occupational_master %>% 
-  anti_join(occupational_cleaned, by=("company_name"))
-```
-
-
-```{r}
-notcleaned$cleaned <- notcleaned$company_name
-glimpse(notcleaned)
-```
-```{r}
-occupational_final <- smartbind(notcleaned, occupational_cleaned)
-glimpse(occupational_final)
-write.csv(occupational_final,"occupational_final.csv")
-```
-
-#Revised Look at the company names 
-#add the function that produces percent of the whole
-```{r}
-occupational_final %>% 
-  count(cleaned) %>% 
-  arrange(desc(n))
-#TOTAL NUMBER OF ARK STATE HEATH DEPT REPORTS PER COMPANY SINCE MAY 19, 2020
-#SIX OF TEN ARE POULTRY PROCESSING
-#TYSON IS 36% OF ALL REPORTS
-```
-
-#NEXT: FILTER THIS TO THE SPECIFIC WORKPLACE AND THE HIGHEST VALUE OF CASES
-```{r}
-companytotals <- occupational_final %>% 
-  select(company_name, cleaned, date, address, city, county, total_number_of_cases) %>% 
-  group_by(company_name, address, city,county) %>% 
-  filter(total_number_of_cases == max(total_number_of_cases)) 
-
-sum(companytotals$total_number_of_cases)
-  
-```
-
-#Group reoccuring names - City 
-#I don't think this is changing the names in the column to be regrouped? I don't understand
-```{r}
-fortsmith <- occupational_master %>% 
-  filter(grepl ("Smith", city)) %>% 
-  mutate(cleaned = "fort_smith")
-
-greenforest <- occupational_master %>% 
-  filter(grepl ("Green", city)) %>% 
-  mutate(cleaned = "green_forest")
-
-```
 
 
 #-----------------------------
@@ -620,71 +668,6 @@ greenforest <- occupational_master %>%
 #Everything below needs to be adjusted to the new occupational_master file. 
 #Zimmardi adjusted everything below to the new occupational_master file.
 #---------------------------
-
-#Continued Analysis
-```{r}
-#Analyze records by cleaned company name
-companyreports <- occupational_master %>% 
-  select(date, city, county, cleaned) %>% 
-  group_by(cleaned) %>% 
-  count() %>% 
-  arrange(desc(n))
-  
-#write.csv(companyreports, "companyreports.csv")
-companyreports
-
-#Notes: Tyson, 250, ConAgra, 39, Simmons Foods, 39
-```
-
-
-```{r}
-#Analyze records by industry
-industryreports <- occupational_master %>% 
-  select(date, city, county, company_name, industry) %>% 
-  group_by(industry) %>% 
-  count() %>% 
-  arrange(desc(n))
-#write.csv(industryreports, "industryreports.csv")
-industryreports
-  
-#Notes: Largest industry category is NA with 459, from 5.19 to 9.14. These are when the reports were Poulty, Non-Poultry.
-#Manufacturing has 326 records
-```
-
-#Split Dates for Analysis
-```{r}
-occupational_master$year <- year(occupational_master$date)
-occupational_master$month <- month(occupational_master$date, label=TRUE)
-#occupation_master1$week <- week(occupation_master1$date)
-#occupation_master1$day <- day(occupation_master1$date)
-#occupation_master1$weekday <- wday(occupation_master1$date, label=TRUE, abbr=FALSE)
-
-occupational_master
-```
-#WELLS COMMENT: Let's do a ggplot graphic with this
-#Group by Month
-```{r}
-month_counts <- occupational_master %>%
-  select(date, city, county, company_name, industry, month) %>% 
-  group_by(month) %>% 
-  count() %>% 
-  arrange(desc(n))
-month_counts
-write.csv(month_counts,"month_counts.csv")
-#Notes: June, 147, July, 142, Dec, 110 and Aug, 109 are the top months and only months above 100.
-```
-
-#Zimmardi attempt at a ggplot graphic
-```{r}
-#install.packages("ggplot2")
-library(ggplot2)
-#ggplot(month_counts, aes(x=month, y=n))
-ggplot(month_counts) + geom_point(aes(x=month, y=n, color=n)) + geom_smooth(aes(x=month, y=n, color=n))
-
-
-#Zimmardi note: I have been looking up different codes, and I can't figure out how to change the label names and add a title. But this shows the number of records by month.
-```
-
 
 
 
@@ -1267,4 +1250,86 @@ washington <- occupation_master1 %>%
 ```
 
 
+#### Previous company name cleaning
+
+
+
+#Example:
+x915 <- SF %>% 
+  filter(grepl ("915", original_crime_type_name)) %>% 
+  mutate(cleaned = "homeless_complaint")
+  
+  
+#Group Reoccuring Names - Company Names
+#I don't think this is changing the names in the column to be regrouped? I don't understand
+
+#WELLS NOTE: 
+#This process below creates separate DFs with a new cleaned variable and the company original.
+#The DFs then would be recombined into a new one 
+
+
+```{r}
+tyson <- occupational_master %>% 
+  filter(grepl ("Tyson", company_name)) %>% 
+  mutate(cleaned = "tyson")
+
+conagra <- occupational_master %>% 
+  filter(grepl ("ConAgra", company_name)) %>% 
+  mutate(cleaned = "conagra")
+
+georges <- occupational_master %>% 
+  filter(grepl ("George's", company_name)) %>% 
+  mutate(cleaned = "georges")
+
+pilgrims <- occupational_master %>% 
+  filter(grepl ("Pilgrim's", company_name)) %>% 
+  mutate(cleaned = "pilgrims")
+
+simmons <- occupational_master %>% 
+  filter(grepl ("Simmons", company_name)) %>% 
+  mutate(cleaned = "simmons")
+
+riceland <- occupational_master %>% 
+  filter(grepl ("Riceland", company_name)) %>% 
+  mutate(cleaned = "riceland")
+
+roehm <- occupational_master %>% 
+  filter(grepl ("Roehm", company_name)) %>% 
+  mutate(cleaned = "roehm_america")
+
+saracen <- occupational_master %>% 
+  filter(grepl ("Saracen", company_name)) %>% 
+  mutate(cleaned = "saracen")
+
+
+
+```
+
+#CLEANED IS 402 records
+```{r warning=FALSE}
+occupational_cleaned <- smartbind(tyson, conagra, georges, pilgrims, simmons, 
+                                  riceland, roehm, saracen)
+glimpse(occupational_cleaned)
+
+#write.csv(occupational_cleaned, "occupational_cleaned.csv")
+
+```
+
+#Extracts the records that were not cleaned: 
+
+```{r}
+notcleaned <- occupational_master %>% 
+  anti_join(occupational_cleaned, by=("company_name"))
+```
+
+
+```{r}
+notcleaned$cleaned <- notcleaned$company_name
+glimpse(notcleaned)
+```
+```{r}
+occupational_final <- smartbind(notcleaned, occupational_cleaned)
+glimpse(occupational_final)
+write.csv(occupational_final,"occupational_final.csv")
+```
 
