--- a/Occupation Data Hennigan_Wells.rmd
+++ b/Occupation Data Hennigan_Wells.rmd
@@ -8,12 +8,13 @@ output: pdf_document
 # Mary- Abby:
 # Please go through and do some serious cutting on this script
 # 
-# 1) Move the whole occupational_master table construction to the end.
+# 1) Moved the whole occupational_master table construction to the end.
 # Kill out any previous versions
 # 2) Clean cities.
 # 3) Clean counties.
-# 4) Write an updated csv with the cleaned companies, cities and counties
-# 5) Run totals by company, highest cases
+# 4) Clean companies
+# 5) Write an updated csv with the cleaned companies, cities and counties
+# 6) Run totals by company, highest cases
 
 
 
@@ -60,35 +61,6 @@ occupational_master <- rio::import("https://raw.githubusercontent.com/profrobwel
 ```
 
 
-
-#County Work
-#Needs more cleaning: Some early records have two cities in city and two counties in county. Three December reports have part of the Industry type in the county column
-
-
-#WELLS NOTE: Two of the wealthiest counties in Arkansas have the highest number of occupational reports Benton, 95; Washington 83;
-
-
-```{r}
-#Analyze records by county location
-countyreports <- occupational_master %>% 
-  select(date, city, county) %>% 
-  group_by(county) %>% 
-  count() %>% 
-  arrange(desc(n))
-
-countyreports
-
-#apply the remove punctuation
-occupational_master$county <- gsub("[[:space:]]", "", occupational_master$county)
-
-
-#write.csv(countyreports, "countyreports.csv")
-
-#Notes: Benton, 95; Washington 83; Pope 68;Craighead 56 are the top counties. This is not 100% cleaned yet, but nearly finished.
-  
-```
-
-
 #City Work
 #Needs more cleaning. "AR" is not a city. Two reports from May have two cities listed in one cell. Six reports from October have part of the Industry type split between City and County column. Ft Smith and Fort Smith need to be mutated, GreenForest and GreenForrest. "Various locations" is not a city. Springdale Public school is in Springdale City, Washington County. 
 #Group reoccuring names - City
@@ -97,13 +69,15 @@ occupational_master$county <- gsub("[[:space:]]", "", occupational_master$county
 ```{r}
 #Thanks Sean, Kara and Nick:
 cleaned_data <- occupational_master %>%
-  mutate(cleaned = tolower(company_name)) %>%
-  #mutate(cleaned = str_remove("'",cleaned)) %>%
-  mutate(cleaned = case_when(
-    str_detect(cleaned, "roehm") ~ "roehm_america",
-    str_detect(cleaned, "tyson") ~ "tyson",
-    TRUE ~ cleaned
+  mutate(cleaned_city = tolower(city)) %>%
+  #mutate(cleaned_city = str_remove(" ",cleaned_city)) %>%
+  mutate(cleaned_city = case_when(
+    str_detect(cleaned_city, "pine") ~ "pine_bluff",
+    str_detect(cleaned_city, "hot") ~ "hot_springs",
+    TRUE ~ cleaned_city
   ))
+
+cleaned_data$cleaned_city <- str_trim(cleaned_data$cleaned_city) 
 ```
 
 
@@ -136,6 +110,9 @@ cityreports
 #Notes: Springdale has most reports with 70, Russellville follows with 59 then Rogers, 58. 
 ```
 
+#Clean Counties using the same methods as above
+#County Work
+#Needs more cleaning: Some early records have two cities in city and two counties in county. Three December reports have part of the Industry type in the county column
 
 
 #Clean company names
@@ -181,6 +158,33 @@ sum(companytotals$total_number_of_cases)
 #Part 2: ANALYSIS
 #--------------------------------------------------------------------#
 #--------------------------------------------------------------------#
+
+
+
+#WELLS NOTE: Two of the wealthiest counties in Arkansas have the highest number of occupational reports Benton, 95; Washington 83;
+
+
+```{r}
+#Analyze records by county location
+countyreports <- occupational_master %>% 
+  select(date, city, county) %>% 
+  group_by(county) %>% 
+  count() %>% 
+  arrange(desc(n))
+
+countyreports
+
+#apply the remove punctuation
+occupational_master$county <- gsub("[[:space:]]", "", occupational_master$county)
+
+
+#write.csv(countyreports, "countyreports.csv")
+
+#Notes: Benton, 95; Washington 83; Pope 68;Craighead 56 are the top counties. This is not 100% cleaned yet, but nearly finished.
+  
+```
+
+
 #TOTAL REPORTS BY CITY BY DAY
 ```{r}
 #Analyze records by date and location
